# htmx-play

./: Makefile  main.py  pyproject.toml  templates.py
examples/: example_01_button_click.py  example_02_counter.py  example_03_trigger.py  examples.py
public/: site.css
services/: __init__.py  contact.py  contacts.json
templates/: edit.html  index.html  layout.html  new.html  show.html
templates/components/: flash-message.html  navbar.html
templates/examples/: 01-button-click.html  02-react-counter-example.html  02-react-counter.html  03-hx-trigger.html
