[tool.poetry]
name = "python-ui-demo"
version = "0.1.0"
description = ""
authors = ["Ole-Jakob Olsen <ole.jakob.olsen@ngi.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
fastapi = "^0.110.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
itsdangerous = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
